# saltare

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.production  LICENSE  Makefile  README.md  build.zig  build.zig.zon  pyproject.toml
.github/workflows/: release.yml
benchmarks/: app.py  bench.py  pss_fork_vs_subinterp.py  run_granian.py  run_saltare.py  run_uvicorn.py  soak.py
examples/: compression.py  django.md  observability.py  sendfile.py
examples/channels/: README.md  asgi.py  consumers.py  settings.py
scripts/: build-wheel.sh  install-zig.sh  smoke-alpine.sh
src/saltare/: __init__.py  __main__.py  _core.pyi  _dispatcher.py  _reload.py  cli.py
src/saltare/contrib/: __init__.py
src/saltare/contrib/django/: __init__.py  apps.py
src/saltare/contrib/django/management/commands/: runserver.py
src/zig/: bridge.zig  brotli.zig  eventloop.zig  h2.zig  h2_encoder.zig  h2_response.zig  h2_static.zig  http.zig  huffman.zig  master.zig  module.zig  pool.zig  server.zig  timer.zig  tls.zig  ws.zig  zlib.zig  zstd.zig
tests/: conftest.py  test_asgi.py  test_caps.py  test_channels.py  test_chunked.py  test_cli_unit.py  test_dispatcher_unit.py  test_drain.py  test_http2.py  test_keepalive.py  test_lifespan.py  test_multiworker.py  test_observability.py  test_reload_unit.py  test_shutdown.py  test_smoke.py  test_streaming.py  test_subinterp.py  test_timeouts.py  test_tls.py  test_v13.py  test_v14_extras.py  test_v14_reload.py  test_v14_sendfile.py  test_v14_zlib.py  test_v15.py  test_v16.py  test_v18_edge.py  test_websocket.py  test_ws_compression.py  test_ws_keepalive.py  test_ws_lifecycle.py  test_ws_stress.py  valgrind.supp
