[build-system]
# 0.11 is the first release with stable PEP 639 ("license" as SPDX
# expression) handling, which the [project] table below uses.
requires = ["scikit-build-core>=0.11"]
build-backend = "scikit_build_core.build"

[project]
name = "saltare"
version = "1.4.0"
description = "Low-RAM ASGI HTTP server with a Zig backbone."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Ricardo Robles", email = "ricardo.r.f@hotmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.scripts]
saltare = "saltare.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "httpx>=0.27",
    "fastapi>=0.115",
    "websockets>=13",
]
# `pip install saltare[django]` pulls Django alongside saltare and
# unlocks the `saltare.contrib.django` integration: add
# `"saltare.contrib.django"` to INSTALLED_APPS and `manage.py runserver`
# runs the project under saltare (ASGI) instead of Django's bundled
# wsgiref dev server. Autoreload + staticfiles handling are preserved.
django = [
    "django>=4.2",
]

[tool.scikit-build]
minimum-version = "0.11"
cmake.version = ">=3.20"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/saltare"]
# Pyi stubs and the compiled _core extension live next to __init__.py in the wheel
wheel.exclude = ["**/*.zig", "**/*.zon"]

[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]
skip = ["*-musllinux_*", "pp*", "*-win32", "*_i686"]
build-verbosity = 1
test-requires = ["pytest", "httpx", "fastapi", "websockets"]
test-command = "pytest -q {project}/tests"

[tool.cibuildwheel.linux]
# openssl-devel: tls.zig @cIncludes openssl/ssl.h + openssl/err.h. Manylinux
# images ship the runtime libs but not the headers; without -devel the zig
# build fails before it can produce _core.so. auditwheel repair vendors the
# runtime libs into the final wheel so end users don't need them installed.
before-all = "bash {project}/scripts/install-zig.sh && dnf install -y openssl-devel"
environment = { PATH = "/usr/local/bin:$PATH", ZIG_VERSION = "0.16.0" }
archs = ["x86_64", "aarch64"]
# Match the local Docker pipeline (scripts/build-wheel.sh + Dockerfile use
# manylinux_2_28). Also avoids the OpenSSL 1.0.2 in older manylinux2014
# images that some saltare TLS APIs may not match.
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.pytest.ini_options]
testpaths = ["tests"]
